# lliurex-desktop-layout-selector

./: CMakeLists.txt
debian/: changelog  control  copyright  lliurex-desktop-layout-selector.pofiles  lliurex-desktop-layout-selector.zero  rules
lliurex-po/lliurex-desktop-layout-selector/: ca@valencia.po  es.po  lliurex-desktop-layout-selector.pot
llx-resources/lliurex-desktop-layout-selector/desktops/: lliurex-desktop-layout-selector.desktop
rsrc/: main.qml
src/: CMakeLists.txt  lnf.hpp  lnfobject.cpp  lnfobject.hpp  main.cpp  plugin.cpp  window.cpp  window.hpp
zero/: lliurex-desktop-layout-selector.app  lliurex-desktop-layout-selector.zmd
